--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
 
 <meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content="深度学习与人工智能"/>
-<meta name="twitter:site" content="@"/>
+<meta name="twitter:site" content="@sleechengn@live.cn"/>
 
 
 
@@ -111,6 +111,9 @@
     
 
     
+
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+
 </head>
 <body class="nav-closed">
 
@@ -186,6 +189,11 @@
 
 
 
+
+    <a class="bloglogo" href="https://twitter.com/sleechengn@live.cn" target="_blank">
+        <span class="icon-twitter" style="color:white;font-size:2em"></span>
+    </a>
+&nbsp;
 
 
 
