--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
 
 <meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content="Deeplearning And Artificial Intelligence"/>
-<meta name="twitter:site" content="@sleechengn@live.cn"/>
+<meta name="twitter:site" content="@sleechengn"/>
 
 
 
@@ -195,7 +195,7 @@
 
 
 
-    <a class="bloglogo" href="https://twitter.com/sleechengn@live.cn" target="_blank">
+    <a class="bloglogo" href="https://twitter.com/sleechengn" target="_blank">
         <span class="icon-twitter" style="color:white;font-size:2em"></span>
     </a>
 &nbsp;
