--- a/index.html
+++ b/index.html
@@ -475,6 +475,7 @@ SDG的更新方法：
 $$ \Delta_{\theta_t} = - \eta g_t $$
 Moment 动量是一常见的更新策略，在动量的帮助下，可以加速神经网络的收敛，可以有效的节省收敛时间，因为动量是累积的，所以可以很快的方式达到收敛。 公式：
 $$ vt=\mu v{t-1} + g_t $$
+update
 $$ \Delta_{\theta_t} = - \eta v_t $$
 参数说明：
 $$ \text{参数：} \mu \text{ 衰减系数} $$
