--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
 <meta property="og:title" content="404 Page not found  &middot; 机器学习与人工智能 ">
 <meta property="og:site_name" content="机器学习与人工智能"/>
 <meta property="og:url" content="" />
-<meta property="og:locale" content="zh-CN">
+<meta property="og:locale" content="en-EN">
 
 
 <meta property="og:type" content="website" />
