--- a/404.html
+++ b/404.html
@@ -41,9 +41,9 @@
 <![endif]-->
 
 <link href='https://fonts.googleapis.com/css?family=Merriweather:300%7CRaleway%7COpen+Sans' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="http://www.ml4ai.comcss/font-awesome.min.css">
-<link rel="stylesheet" href="http://www.ml4ai.comcss/style.css">
-<link rel="stylesheet" href="http://www.ml4ai.comcss/highlight/default.css">
+<link rel="stylesheet" href="http://www.ml4ai.com/css/font-awesome.min.css">
+<link rel="stylesheet" href="http://www.ml4ai.com/css/style.css">
+<link rel="stylesheet" href="http://www.ml4ai.com/css/highlight/default.css">
 
   
   
@@ -64,7 +64,7 @@
     <header id="main-header" class="container main_header">
   <div class="container brand">
   <div class="container title h1-like">
-  <a class="baselink" href="http://www.ml4ai.com">
+  <a class="baselink" href="http://www.ml4ai.com/">
   foobar
 
 </a>
@@ -85,7 +85,7 @@
   <nav class="container nav primary no-print">
   
 
-<a class="homelink" href="http://www.ml4ai.com">home</a>
+<a class="homelink" href="http://www.ml4ai.com/">home</a>
 
 
   
@@ -141,7 +141,7 @@
 <article id="main-content" class="container main_content error_404">
   <h1>404 Not found</h1>
   <p>What you&#39;re looking for isn&#39;t here, sorry!</p>
-  <p><a href="http://www.ml4ai.com">&larr; Click here to go back home</a></p>
+  <p><a href="http://www.ml4ai.com/">&larr; Click here to go back home</a></p>
 </article>
 
       <footer id="main-footer" class="container main_footer">
@@ -197,7 +197,7 @@
 
 
 
-<script src="http://www.ml4ai.comjs/highlight.pack.js"></script>
+<script src="http://www.ml4ai.com/js/highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 
 
