--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@ $$</p>
 		
 		</ul>
 	</div>
-	<audio src="/av/Alpha.mp3">
+	<audio src="/av/Alpha.mp3" autoplay="autoplay">
 		您的浏览器不支持 audio 标签。
 	</audio>
 	<p>&copy; 2018. All rights reserved.</p>
