--- a/archive.html
+++ b/archive.html
@@ -31,7 +31,7 @@
   </head>
   <body onload="prettyPrint()">
     <div id="wrap">
-	
+
 	<!-- Fixed navbar -->
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
@@ -63,42 +63,34 @@
         </div><!--/.nav-collapse -->
       </div>
     </div>
-    <div class="container">
+    <div class="container">	
 	<div class="page-header">
-		<h3>machine learning for artificial intelligence</h3>
+		<h1>Blog Archive</h1>
 	</div>
-  			<a href="post/about.html"><h3>关于我们</h3></a>
-  			<p>22 五月 2018</p>
-  			<p style="color:#999">关于ML4AI，它是一个张量图计算工具，支持自动微分，开发些项目的原因在于市场上缺少一个基于JVM的易用深度学习研究工具，希望大家多多支持。</p>
-  			<a href="post/bp_first.html"><h3>BP神经网络</h3></a>
-  			<p>22 五月 2018</p>
-  			<p style="color:#999">什么是神经网络，它是如何计算的，神经网络图像识别，神经网络逼近。</p>
-  			<a href="post/bp_se.html"><h3>反向传播</h3></a>
-  			<p>22 五月 2018</p>
-  			<p style="color:#999">神经网络输入输出的计算，损失函数，导数。</p>
-  			<a href="post/deeplearning4j_stp.html"><h3>DL4J</h3></a>
-  			<p>22 五月 2018</p>
-  			<p style="color:#999">deeplearning4j是一个基于jvm的机器学习框架，主要应用于商业环境下的机器学习应用场景。</p>
-  			<a href="post/linear_x.html"><h3>线性代数</h3></a>
-  			<p>22 五月 2018</p>
-  			<p style="color:#999">线性代数</p>
-  			<a href="post/optimizer.html"><h3>神经网络优化器</h3></a>
-  			<p>22 五月 2018</p>
-  			<p style="color:#999">更新器，优化器。</p>
-  			<a href="post/pytorch_introduce.html"><h3>Pytorch</h3></a>
-  			<p>22 五月 2018</p>
-  			<p style="color:#999">Pytorch</p>
-  			<a href="post/rnn_network.html"><h3>循环神经网络</h3></a>
-  			<p>22 五月 2018</p>
-  			<p style="color:#999">循环神经网络，递归网络</p>
-  			<a href="post/tensorflow.html"><h3>Tensorflow</h3></a>
-  			<p>22 五月 2018</p>
-  			<p style="color:#999">Tensorflow,一个张量图计算工具</p>
 	
-	<hr />
+	<!--<ul>-->
+			<h4>五月 2018</h4>
+			<ul>
+		
+		<li>22 - <a href="post/deeplearning4j_stp.html">DL4J</a></li>
+		
+		<li>22 - <a href="post/bp_se.html">反向传播</a></li>
+		
+		<li>22 - <a href="post/bp_first.html">BP神经网络</a></li>
+		
+		<li>22 - <a href="post/about.html">关于我们</a></li>
+		
+		<li>22 - <a href="post/tensorflow.html">Tensorflow</a></li>
+		
+		<li>22 - <a href="post/rnn_network.html">循环神经网络</a></li>
+		
+		<li>22 - <a href="post/pytorch_introduce.html">Pytorch</a></li>
+		
+		<li>22 - <a href="post/optimizer.html">神经网络优化器</a></li>
+		
+		<li>22 - <a href="post/linear_x.html">线性代数</a></li>
+	</ul>
 	
-	<p>Older posts are available in the <a href="archive.html">archive</a>.</p>
-
 		</div>
 		<div id="push"></div>
     </div>
