--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="/manifest.json"><link rel="shortcut icon" href="/favicon.ico"><title>深度学习与人工智能(ML FOR AI)</title><link href="/static/css/main.5e5ad022.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/static/js/main.cde779ef.js"></script></body></html>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>机器学习人工智能</title>
+    <link href="app.css" rel="stylesheet"></head>
+    <body>
+        <div id="root">
+            <!--content-->
+        </div>
+    <script type="text/javascript" src="client-entry.js"></script></body>
+</html>
